--- a/prototype/_style-XS.scss
+++ b/prototype/_style-XS.scss
@@ -78,6 +78,20 @@ body {
 }
 
 
+#footer-partner-links {
+
+	li {
+		float: left;
+		width: 100%;
+	}
+
+	a {
+		float: left;
+		width: 100%;
+	}
+}
+
+
 
 
 } // @media
